--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- links -->
     <div class='row mb-4'>
       <div class='col text-center'>
-        <a href="#" target="_blank" class="btn btn-outline-primary" role="button">
+        <a href="https://arxiv.org/abs/2310.16781" target="_blank" class="btn btn-outline-primary" role="button">
           <i class="ai ai-arxiv"></i>
           arXiv
         </a>
@@ -119,9 +119,10 @@
 
       <div class='col-md-12 col-sm-12 col-xs-12 align-middle mt-1'>
         <p class="text-break">
-          Psychological experiments have shown that humans tend to associate certain speech sounds with certain visual
-          shapes.
-          We ask: What about AI models for tasks like text-to-image generation?
+          <b>TL;DR:</b> Psychological experiments have shown that humans tend to associate certain speech sounds with certain
+          visual shapes. We ask: What about AI models for tasks like text-to-image generation? By generating images
+          using prompts containing pseudowords (nonsense words) and analyzing their shapes, we show that <b>AI image generation models also show sound-shape
+          associations.</b>
         </p>
       </div>
     </div>
