--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:image" content="https://tau-vailab.github.io/kiki-bouba/assets/bouba3.jpg" />
+  <meta property="og:title" content="Kiki or Bouba? Sound Symbolism in Vision-and-Language Models" />
+  <meta property="og:description"
+    content="Psychological experiments have shown that humans tend to associate certain speech sounds with certain visual shapes. We ask: What about AI models for tasks like text-to-image generation? By generating images using prompts containing pseudowords (nonsense words) and analyzing their shapes, we show that AI image generation models also show sound-shape associations." />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -119,10 +123,12 @@
 
       <div class='col-md-12 col-sm-12 col-xs-12 align-middle mt-1'>
         <p class="text-break">
-          <b>TL;DR:</b> Psychological experiments have shown that humans tend to associate certain speech sounds with certain
+          <b>TL;DR:</b> Psychological experiments have shown that humans tend to associate certain speech sounds with
+          certain
           visual shapes. We ask: What about AI models for tasks like text-to-image generation? By generating images
-          using prompts containing pseudowords (nonsense words) and analyzing their shapes, we show that <b>AI image generation models also show sound-shape
-          associations.</b>
+          using prompts containing pseudowords (nonsense words) and analyzing their shapes, we show that <b>AI image
+            generation models also show sound-shape
+            associations.</b>
         </p>
       </div>
     </div>
